# clean-packaging-examples

./: .gitignore
executable/: README.md
executable/mess-static/: build.sh  recipe.yaml
python/: README.md
python/output/noarch/: repodata.json  test-package-avcopan-1.2.3-pyh4616a5c_0.conda
python/test-package-avcopan/: pyproject.toml  recipe.yaml
python/test-package-avcopan/test_package_avcopan/: __init__.py
